# Oyez-SA-ASR

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yaml  index.html  justfile  lcov.info  lychee.toml  mkdocs.yml  pylock.toml  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  tox.toml
.claude/commands/: pre-commit.md
.cursor/rules/: instructions.mdc
.devcontainer/: bake.hcl  devcontainer.json  install-vendor-extensions.sh  postCreateCommand  postStartCommand  vendor-extensions.conf
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: pre-commit.yml
asr_normalization_findings/: index.html
asr_normalization_plan/: index.html
docs/: asr_normalization_findings.md  asr_normalization_plan.md  examples.md  huggingface-datasets-specs.md  huggingface-datasets-versioning.md  huggingface-datasets.md  index.md  oyez_api_exploration.md  oyez_api_overview.md  oyez_audio_formats.md  transcript_structure.md  user-guide.md
examples/: demo_flex_dataset.py  demo_flex_dataset_v3.py  demo_raw_dataset.py  demo_raw_dataset_v3.py  demo_simple_dataset.py  demo_simple_dataset_v3.py  index.html
huggingface-datasets/: index.html
huggingface-datasets-specs/: index.html
huggingface-datasets-versioning/: index.html
notebooks/: demo_flex.ipynb  demo_flex_v3.ipynb  demo_raw.ipynb  demo_raw_v3.ipynb  demo_simple.ipynb  demo_simple_v3.ipynb
oyez_api_overview/: index.html
oyez_audio_formats/: index.html
scripts/: analyze_transcripts.py  collect_asr_artifacts.py
search/: search_index.json
src/oyez_sa_asr/: __init__.py  __main__.py  audio_analysis.py  audio_segment.py  audio_source.py  audio_utils.py  cli.py  cli_clear.py  cli_dataset.py  cli_dataset_helpers.py  cli_dataset_simple.py  cli_dataset_simple_core.py  cli_dataset_simple_flavors.py  cli_dataset_simple_load.py  cli_dataset_simple_proc.py  cli_dataset_state.py  cli_pipeline.py  cli_process.py  cli_process_audio.py  cli_process_speakers.py  cli_publish.py  cli_scrape.py  cli_scrape_audio.py  cli_scrape_transcripts.py  cli_stats.py  cli_stats_cases.py  cli_stats_speakers.py  cli_stats_speakers_helpers.py  cli_stats_transcripts.py  hf_compat.py  loaders.py  memory_utils.py  speaker_models.py  term_filter.py  term_parser.py  utterance_filter.py
src/oyez_sa_asr/hf_scripts/: flex.py  raw.py
src/oyez_sa_asr/scraper/: __init__.py  cache.py  case_models.py  downloader.py  fetcher.py  httpx_downloader.py  models.py  parser.py  parser_cases.py  parser_transcripts.py  s3_downloader.py  transcript_models.py  traverser.py  worker_pool.py
tests/: __init__.py  test_audio_analysis.py  test_audio_segment.py  test_audio_segment_compare.py  test_audio_segment_streaming.py  test_audio_source.py  test_audio_utils.py  test_audio_utils_memory.py  test_cache.py  test_cache_versioning.py  test_cli.py  test_cli_dataset.py  test_cli_dataset_helpers.py  test_cli_dataset_simple.py  test_cli_dataset_simple_parallel.py  test_cli_dataset_simple_proc.py  test_cli_dataset_simple_segments.py  test_cli_dataset_simple_skip.py  test_cli_dataset_state.py  test_cli_dataset_state_protection.py  test_cli_pipeline.py  test_cli_pipeline_delegation.py  test_cli_process.py  test_cli_process_audio.py  test_cli_process_audio_era.py  test_cli_process_audio_parallel.py  test_cli_process_speakers.py  test_cli_publish.py  test_cli_stats.py  test_cli_stats_cases.py  test_cli_stats_speakers.py  test_cli_stats_speakers_dist.py  test_cli_stats_transcripts.py  test_cli_transcripts.py  test_collect_asr_artifacts.py  test_downloader.py  test_fetcher.py  test_fetcher_streaming.py  test_hf_compat.py  test_hf_v3.py  (+27 more)
transcript_structure/: index.html
user-guide/: index.html
