[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "oyez-sa-asr"
description = "Oyez project scraper, for the SA-ASR task"
readme = "README.md"

keywords = [  ]
maintainers = [ { name = "Alon Kellner", email = "me@alonkellner.com" } ]
authors = [ { name = "Alon Kellner", email = "me@alonkellner.com" } ]
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
]

dynamic = [ "version" ]
dependencies = [
  "aiobotocore>=2.7",
  "av",
  "datasets",
  "httpx",
  "huggingface-hub>=0.20",
  "numpy",
  "pyarrow>=15",
  "tqdm",
  "typer",
]

urls = { Homepage = "https://github.com/AlonKellner/oyez_sa_asr.git", Repository = "https://github.com/AlonKellner/oyez_sa_asr.git", Bugs = "https://github.com/AlonKellner/oyez_sa_asr/issues", Changelog = "https://github.com/AlonKellner/oyez_sa_asr/blob/main/CHANGELOG.md" }

scripts.oyez_sa_asr = "oyez_sa_asr.cli:app"

[dependency-groups]
dev = [ "coverage[toml]", "ipykernel", "pytest", "pytest-asyncio", "pytest-cov" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/oyez_sa_asr" ]

[tool.hatch.version]
source = "vcs"

[tool.uv]
package = true
python-preference = "only-managed"
link-mode = "copy"

[tool.typos.default.extend-words]
# Correct spelling (typos otherwise "corrects" to unparsable)
unparseable = "unparseable"

[tool.typos.files]
extend-exclude = [ "**/.env.*" ]

[tool.pytest.ini_options]
pythonpath = "./src"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
omit = [ "src/oyez_sa_asr/__init__.py" ]

[tool.ty.environment]
python = "./.venv"

[tool.ty.src]
exclude = [ "./.ties/**", "./.claude/**", "./scripts/**", "./notebooks/**" ]

[tool.rumdl]
disable = [ "MD052" ]

[tool.lintok]
# Edited by Claude: Added exclusions for large files
max_tokens = 2048
exclude = [
  "uv.lock",
  "lcov.info",
  "pylock.toml",
  "requirements.txt",
  "src/oyez_sa_asr/cli_dataset_helpers.py",
  "src/oyez_sa_asr/cli_dataset_simple_proc.py",
  "src/oyez_sa_asr/cli_process_audio.py",
  "src/oyez_sa_asr/cli_pipeline.py",
  "src/oyez_sa_asr/cli_process.py",
  "src/oyez_sa_asr/hf_scripts/flex.py",
  "src/oyez_sa_asr/loaders.py",
  "src/oyez_sa_asr/audio_source.py",
  "notebooks/*.ipynb",
  "tests/test_audio_segment.py",
  "tests/test_audio_source.py",
  "tests/test_transcript_date_consistency.py",
  "tests/test_transcript_models.py",
  "tests/test_cache.py",
  "tests/test_cli.py",
  "tests/test_cli_dataset.py",
  "tests/test_cli_dataset_simple.py",
  "tests/test_cli_dataset_simple_parallel.py",
  "tests/test_cli_dataset_simple_proc.py",
  "tests/test_cli_dataset_simple_segments.py",
  "tests/test_cli_pipeline_delegation.py",
  "tests/test_cli_process.py",
  "tests/test_cli_process_audio.py",
  "tests/test_cli_process_speakers.py",
  "tests/test_cli_stats_transcripts.py",
  "tests/test_cli_transcripts.py",
  "tests/test_cli_dataset_simple_skip.py",
  "tests/test_fetcher.py",
  "tests/test_loaders.py",
  "tests/test_memory_utils.py",
  "tests/test_scrape_audio.py",
  "tests/test_scrape_transcripts.py",
  "tests/test_speaker_profile.py",
  "tests/test_term_parser.py",
  "tests/test_worker_pool.py",
]

[tool.claude-pre-commit]
exclude-files = [ "lcov.info" ]
ignore-rules = [ "shell-script-security", "dockerfile-security" ]
python-custom-rules = [
  # Add project-specific rules here
]
